html/js for dashboard to live update as nodes are discovered/removed. filters to be added soon

--- a/dashboard/tmpl/stylesheets/app.css
+++ b/dashboard/tmpl/stylesheets/app.css
@@ -42,10 +42,22 @@ body {
 }
 
 /* Dashboard */
-dl.tabs {
+#region-tabs {
   margin-bottom: 0;
+  display: none;
 }
 
 .nodes {
   width: 100%;
+}
+
+#loading {
+  text-align: center;
+  font-size: 1.2em;
+  padding: 0;
+  margin: 0;
+}
+
+#loading p {
+  margin-top: 15px;
 }
